--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "coffee-loader": "^0.9.0",
     "coffeescript": "1.12.7",
     "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
     "popper.js": "^1.15.0",
     "turbolinks": "^5.2.0",
     "webpack-jquery-ui": "^2.0.1"
